# spotter

./: README.md  pyproject.toml  report.html  report.json
examples/: fleet_integration.py  run_demo.py
spotter/: __init__.py  checks.py  core.py  scenarios.py
tests/: test_spotter.py
